tests/compile_fail/unsupported_from_self.rs
use from_similar::FromSimilar;

#[derive(FromSimilar)]
#[from(SomeUnit)]
struct SomeUnit;

fn main() {}
